--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -3,6 +3,8 @@
     display: flex;
     background: white;
     position: relative;
+    page-break-after: always;
+    page-break-inside: avoid;
 }
 
 .text {
